--- a/.editorconfig
+++ b/.editorconfig
@@ -17,7 +17,8 @@ indent_size = 4
 indent_style = space
 indent_size = 4
 
-[.travis.yml]
+[*.yml]
+# YAML requires space indentation; tabs aren't allowed.
 indent_style = space
 indent_size = 2
 
