--- a/.github/workflows/android_builds.yml
+++ b/.github/workflows/android_builds.yml
@@ -1,5 +1,14 @@
+# =====
+# FIXME: Replace 'push' with 'schedule' in `if` conditions before opening a pull request!
+# =====
 name: 🤖 Android Builds
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    # Every day at midnight (UTC).
+    # This keeps the class reference status page fresh.
+    - cron: '0 0 * * *'
 
 # Global Settings
 env:
@@ -10,9 +19,9 @@ env:
 
 jobs:
   android-template:
-    runs-on: "ubuntu-20.04"
+    runs-on: ubuntu-20.04
 
-    name: Template (target=release, tools=no)
+    name: Export template (tools=no)
 
     steps:
       - uses: actions/checkout@v2
@@ -35,6 +44,8 @@ jobs:
 
       # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
+        # Don't use cache for optimized builds.
+        if: github.event_name != 'push'
         id: android-template-cache
         uses: actions/cache@v2
         with:
@@ -66,8 +77,14 @@ jobs:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
           ANDROID_NDK_ROOT: /usr/local/lib/android/sdk/ndk/${{env.ANDROID_NDK_VERSION}}/
         run: |
-          scons target=release tools=no android_arch=armv7
-          scons target=release tools=no android_arch=arm64v8
+          if [[ "$GITHUB_EVENT_NAME" == "push" ]]; then
+            unset SCONS_CACHE
+            scons tools=no target=release android_arch=armv7
+            scons tools=no target=release android_arch=arm64v8
+          else
+            scons tools=no target=debug android_arch=armv7
+            scons tools=no target=debug android_arch=arm64v8
+          fi
           cd platform/android/java
           ./gradlew generateGodotTemplates
           cd ../../..
@@ -75,6 +92,7 @@ jobs:
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.job }}
+          name: ${{ github.job }}-${{ github.event_name == 'push' && 'release' || 'debug' }}
           path: bin/*
           retention-days: 14
+          if-no-files-found: error
