--- a/.github/workflows/linux_builds.yml
+++ b/.github/workflows/linux_builds.yml
@@ -1,5 +1,14 @@
+# =====
+# FIXME: Replace 'push' with 'schedule' in `if` conditions before opening a pull request!
+# =====
 name: 🐧 Linux Builds
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    # Every day at midnight (UTC).
+    # This keeps the class reference status page fresh.
+    - cron: '0 0 * * *'
 
 # Global Settings
 env:
@@ -9,8 +18,8 @@ env:
 
 jobs:
   linux-editor-mono:
-    runs-on: "ubuntu-20.04"
-    name: Editor w/ Mono (target=release_debug, tools=yes)
+    runs-on: ubuntu-20.04
+    name: Editor with Mono (tools=yes)
 
     steps:
       - uses: actions/checkout@v2
@@ -30,6 +39,8 @@ jobs:
 
       # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
+        # Don't use cache for optimized builds.
+        if: github.event_name != 'push'
         id: linux-editor-cache
         uses: actions/cache@v2
         with:
@@ -62,18 +73,24 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons tools=yes target=release_debug module_mono_enabled=yes mono_glue=no
+          if [[ "$GITHUB_EVENT_NAME" == "push" ]]; then
+            unset SCONS_CACHE
+            scons tools=yes target=release_debug module_mono_enabled=yes mono_glue=no use_lto=yes debug_symbols=no
+          else
+            scons tools=yes target=debug module_mono_enabled=yes mono_glue=no
+          fi
           ls -l bin/
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.job }}
+          name: ${{ github.job }}-${{ github.event_name == 'push' && 'release' || 'debug' }}
           path: bin/*
           retention-days: 14
+          if-no-files-found: error
 
   linux-template-mono:
-    runs-on: "ubuntu-20.04"
-    name: Template w/ Mono (target=release, tools=no)
+    runs-on: ubuntu-20.04
+    name: Export template with Mono (tools=no)
 
     steps:
       - uses: actions/checkout@v2
@@ -93,6 +110,8 @@ jobs:
 
       # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
+        # Don't use cache for optimized builds.
+        if: github.event_name != 'push'
         id: linux-template-cache
         uses: actions/cache@v2
         with:
@@ -124,17 +143,25 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons target=release tools=no module_mono_enabled=yes mono_glue=no debug_symbols=no
+          if [[ "$GITHUB_EVENT_NAME" == "push" ]]; then
+            unset SCONS_CACHE
+            scons tools=no target=release module_mono_enabled=yes mono_glue=no use_lto=yes debug_symbols=no
+          else
+            scons tools=no target=debug module_mono_enabled=yes mono_glue=no
+          fi
           ls -l bin/
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.job }}
+          name: ${{ github.job }}-${{ github.event_name == 'push' && 'release' || 'debug' }}
           path: bin/*
           retention-days: 14
+          if-no-files-found: error
 
   linux-editor-sanitizers:
-    runs-on: "ubuntu-20.04"
+    # There's no point in running this job in a schedule.
+    if: github.event.name != 'push'
+    runs-on: ubuntu-20.04
     name: Editor and exported project with sanitizers (target=debug/release, tools=yes/no, debug_symbols=yes/full, use_ubsan=yes, use_asan=yes)
 
     steps:
