--- a/.github/workflows/macos_builds.yml
+++ b/.github/workflows/macos_builds.yml
@@ -1,5 +1,14 @@
+# =====
+# FIXME: Replace 'push' with 'schedule' in `if` conditions before opening a pull request!
+# =====
 name: 🍎 macOS Builds
-on: [push, pull_request]
+on:
+  push:
+  pull_request:
+  schedule:
+    # Every day at midnight (UTC).
+    # This keeps the class reference status page fresh.
+    - cron: '0 0 * * *'
 
 # Global Settings
 env:
@@ -9,15 +18,17 @@ env:
 
 jobs:
   macos-editor:
-    runs-on: "macos-latest"
+    runs-on: macos-10.15
 
-    name: Editor (target=release_debug, tools=yes)
+    name: Editor (tools=yes)
 
     steps:
       - uses: actions/checkout@v2
 
       # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
+        # Don't use cache for optimized builds.
+        if: github.event_name != 'push'
         id: macos-editor-cache
         uses: actions/cache@v2
         with:
@@ -50,24 +61,32 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons tools=yes target=release_debug
+          if [[ "$GITHUB_EVENT_NAME" == "push" ]]; then
+            unset SCONS_CACHE
+            scons tools=yes target=release_debug debug_symbols=no
+          else
+            scons tools=yes target=debug
+          fi
           ls -l bin/
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.job }}
+          name: ${{ github.job }}-${{ github.event_name == 'push' && 'release' || 'debug' }}
           path: bin/*
           retention-days: 14
+          if-no-files-found: error
 
   macos-template:
-    runs-on: "macos-latest"
-    name: Template (target=release, tools=no)
+    runs-on: macos-10.15
+    name: Export template (tools=no)
 
     steps:
       - uses: actions/checkout@v2
 
       # Upload cache on completion and check it out now
       - name: Load .scons_cache directory
+        # Don't use cache for optimized builds.
+        if: github.event_name != 'push'
         id: macos-template-cache
         uses: actions/cache@v2
         with:
@@ -99,11 +118,17 @@ jobs:
         env:
           SCONS_CACHE: ${{github.workspace}}/.scons_cache/
         run: |
-          scons target=release tools=no debug_symbols=no
+          if [[ "$GITHUB_EVENT_NAME" == "push" ]]; then
+            unset SCONS_CACHE
+            scons tools=no target=release debug_symbols=no
+          else
+            scons tools=no target=debug
+          fi
           ls -l bin/
 
       - uses: actions/upload-artifact@v2
         with:
-          name: ${{ github.job }}
+          name: ${{ github.job }}-${{ github.event_name == 'push' && 'release' || 'debug' }}
           path: bin/*
           retention-days: 14
+          if-no-files-found: error
